tests/fixtures/syntax/invalid/document_case_write_step.repor
# Execution constructs are not part of the document case body whitelist; a
# write step inside the block is a syntax error.
document case {
  write <"out.txt"> "value"
}

case "never parsed" {
  $ true
  assert {
    exit 0
  }
}
